# deepgram-mcp

./: .gitignore  Cargo.toml  README.md  mcp-config.json
src/: main.rs
